# fapra-algorithms-optimizations

./: .gitignore  README.md  openapi.json
osm-tasks/: .gitignore  Cargo.toml  README.md  monaco-latest.osm.pbf
osm-tasks-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
osm-tasks-frontend/e2e/src/: app.e2e-spec.ts
osm-tasks-frontend/src/: index.html
osm-tasks-frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  app.routing.ts
osm-tasks-frontend/src/app/map/: map.component.html  map.component.ts
osm-tasks-frontend/src/app/statistics/: statistics.component.html  statistics.component.ts
osm-tasks/src/: benchmark.rs  config.rs  cors.rs  dijkstra.rs  grid_graph.rs  json_generator.rs  kml_exporter.rs  main.rs  max_testing.rs  navigator_use_case.rs  nearest_neighbor.rs  pbf_reader.rs  polygon_test.rs
osm-tasks/src/algorithms/: a_star.rs  bd_dijkstra.rs  cn_graph_creator.rs  cn_search.rs  contraction_hierarchies.rs  dijkstra.rs  dijkstra_one_to_many.rs  mod.rs  nearest_neighbor.rs  unwrap_shortcuts.rs  witness_search.rs
osm-tasks/src/export/: json_generator.rs  kml_exporter.rs  mod.rs
osm-tasks/src/import/: mod.rs  pbf_reader.rs
osm-tasks/src/model/: adjacency_array.rs  benchmark.rs  cn_model.rs  grid_graph.rs  heap_item.rs  mod.rs  priority_heap_item.rs
osm-tasks/src/persistence/: benchmark_repo.rs  in_memory_benchmark_repo.rs  in_memory_navigator.rs  in_memory_routing_repo.rs  mod.rs  navigator.rs  routing_repo.rs
