[package]
name = "osm-tasks"
version = "0.1.0"
authors = ["Felix Burk <felix.burk@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
rayon = "1.5"
rand = "0.8.3"
kml = "0.3.1"
geo = ""
quadtree_rs = "0.1.2"