[package]
name = "osm-tasks"
version = "0.1.0"
authors = ["Felix Burk <felix.burk@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
rayon = "1.5"
rand = "0.8.3"
kml = "0.3.1"
geo = ""
quadtree_rs = "0.1.2"
rocket = "0.4.10"
rocket_okapi = "0.5"
schemars = "0.7"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }
serde = "1.0.126"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.3"
default-features = false
features = ["json"]
