[package]
name = "osm-tasks"
version = "0.1.0"
authors = ["Felix Burk <felix.burk@googlemail.com>", "Maximilian Reichel <reichemn@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
rayon = "1.5"
rand = "0.8.3"
kml = "0.3.1"
geo = ""
quadtree_rs = "0.1.2"
schemars = "0.7"
rocket_okapi = "0.5"
rocket = { version = "0.4.10", default-features = false }
okapi = { version = "0.4", features = ["derive_json_schema"] }
serde = "1.0"
crossbeam = "0.8.0"
bincode = "1.3.3"
clap = "3.0.0-beta.2"
once_cell = "1.5.2"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
